React table Scrollbar UI Design Fixed according to Theme Color Pattern

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -664,6 +664,9 @@ body .login {
     }
   }
 
+
+  
+
   .dropdown-toggle {
     padding: 5px;
     width: 100%;
@@ -5008,8 +5011,31 @@ select.form-control {
   }
 }
 
-
-/**************** Tooltip ************/
+/*************** tooltip ******************************/
 .tooltip-custom a{
   cursor: unset;
 }
+
+/****************************** scroll-bar-issue **********************************/
+
+.ReactTable .rt-table::-webkit-scrollbar-track
+  {
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   border-radius: 10px !important;
+   background-color: #1b5d8c !important;
+  }
+  
+  .ReactTable .rt-table::-webkit-scrollbar
+  {
+   width: 8px !important;
+   background-color: #1b5d8c !important;
+  }
+  
+  .ReactTable .rt-table::-webkit-scrollbar-thumb
+  {
+   border-radius: 10px !important;
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3) !important;
+   background-color: #15354c !important;
+  }
+
+
